[package]
name = "webmatrix-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen-futures = "0.4.28"
# matrix-sdk = { path = "../matrix-rust-sdk/crates/matrix-sdk" }

[dependencies.matrix-sdk]
path = "../matrix-rust-sdk/crates/matrix-sdk"
default-features = false
features = ["native-tls", "encryption"]
