[package]
edition = "2018"
name = "webmatrix-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.28"
yew = "0.18"
# matrix-sdk = { path = "../matrix-rust-sdk/crates/matrix-sdk" }

[dependencies.matrix-sdk]
default-features = false
features = ["native-tls", "encryption"]
path = "../matrix-rust-sdk/crates/matrix-sdk"
# version = "*"
